# lets_make_ai_app

./: README.md  pyproject.toml
src/lets_make_ai_app/: __init__.py
src/lets_make_ai_app/03_make_ai_app/: chat_gpt_clone_app.py
src/lets_make_ai_app/04_tuneup_ai_app/: chat_gpt_clone_app.py
